--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>안녕</h1>
     <p>내 이름은 이동준이야.</p>
-    <a href="01_02_practice.html">내가 만든 거임</a>
+    <a href="01_02_practice.html">김두희가 다시 알려달라고 함</a>
 </body>
 
 </html>
